# Alephonor

./: .gitignore  .rustfmt.toml  Cargo.toml  biome.json  package.json  pnpm-workspace.yaml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/backend/: Cargo.toml  tauri.conf.json
apps/desktop/backend/capabilities/: default.json
apps/desktop/backend/src/: account.rs  amp.rs  apps.rs  lib.rs  main.rs
apps/desktop/backend/src/apache/: macos.rs  mod.rs
apps/desktop/backend/src/mysql/: macos.rs
apps/desktop/backend/testdata/: services.json
apps/desktop/backend/testdata/infra/docker/webserver/: Dockerfile  compose.yaml
apps/desktop/backend/testdata/infra/docker/webserver/conf/: mysql.cnf
apps/desktop/backend/testdata/infra/docker/webserver/conf/nginx/: nginx.conf
apps/desktop/backend/testdata/infra/docker/webserver/conf/php/: docker-xdebug.ini
apps/desktop/frontend/: main.ts
apps/desktop/frontend/plugins/: vue-router.ts
apps/desktop/frontend/src-tauri/: app.vue
apps/desktop/frontend/src-web/: app.vue
apps/desktop/frontend/types/: vue.d.ts  window.d.ts
apps/desktop/public/: .gitignore
libs/cargo/alephonor-env/: Cargo.toml
libs/cargo/alephonor-env/tests/: from_file.rs  from_str.rs
libs/npm/alephonor-domain/: package.json
libs/npm/alephonor-domain/entities/: account.ts  service.ts
libs/npm/alephonor-domain/pages/: enum.ts
libs/npm/alephonor-domain/screens/: enum.ts
libs/npm/alephonor-system-design/: package.json
libs/npm/alephonor-system-design/pages/: index.ts  (+2 more)
libs/scss/alephonor-sheets/: package.json
www/static-website/: astro.config.mjs  package.json
www/static-website/src/: consts.ts  content.config.ts
(+111 files in other folders)
