[workspace]
resolver = "3"
members = ["apps/desktop/backend", "libs/cargo/*"]

[workspace.package]
authors = ["Mike '@PhiSyX' S."]
edition = "2024"
version = "0.1.0"

[workspace.lints.rust]
async_fn_in_trait = "allow"
# dead_code = "allow"
non_camel_case_types = "allow"
# unsafe_code = "forbid"
[workspace.lints.clippy]
too_long_first_doc_paragraph = "allow"

[workspace.dependencies]
alephonor-env = { path = "libs/cargo/alephonor-env" }
serde = { version = "^1.0.219", features = ["derive"] }
serde_json = { version = "^1.0.140" }
thiserror = { version = "^2.0.12" }
tokio = { version = "^1.44.1", features = ["full"] }
