[package]
name = "alephonor"
version = "0.1.0"
description = "Alephonor"
authors = ["Mike 'PhiSyX' S."]
edition = "2024"

[lib]
name = "alephonor_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "^2.0.5", features = [] }

[dependencies]
alephonor-env = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

tauri = { version = "^2.3.0", features = ["tray-icon"] }
tauri-plugin-fs = "^2.2.0"
tauri-plugin-opener = "^2.2.5"
tauri-plugin-os = "^2.2.0"
tauri-plugin-shell = "^2.2.0"
